velero-cel/block-velero-restore/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-velero-restore
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
